syntax = "proto3";

package protos;
option go_package = "/protos";

service P2P {
    rpc LatestBlock(LatestBlockRequest) returns (LatestBlockResponse);
    rpc TxPoolPending(TxpoolPendingRequest) returns (TxpoolPendingResponse);
}

message LatestBlockRequest{
}

message LatestBlockResponse{
    uint64 height = 1;
    bytes encodedBlock = 2;
}

message TxpoolPendingRequest{
}

message TxpoolPendingResponse{
    repeated bytes encodedTxs = 1;
}
